# EPyGrAM

./: MANIFEST.in  README.md  poetry_pyproject.toml  pyproject.toml  requirement.txt
apptools/: wa.py
site/arpifs4py/: __init__.py  wtransforms.py
src/: arpifs4py  griberies
src/epy_extra/arpifs4py/: __init__.py
src/epygram/: __init__.py  args_catalog.py  base.py
src/epygram/_plugins/with_cartopy/: H2DField.py
src/epygram/epy_extra/: __init__.py
src/epygram/epy_extra/arpifs4py/: __init__.py
src/epygram/extra/arpifs4py/: __init__.py  wtransforms.py
src/epygram/formats/: DDHLFA.py  FA.py  GRIB.py  LFA.py  LFI.py  TIFFMF.py  __init__.py  fafields.py
src/epygram/geometries/: SpectralGeometry.py
tests/: __init__.py
